added image styled div class whynyg

--- a/style2.css
+++ b/style2.css
@@ -142,3 +142,9 @@ background-color:darkred;
     width: 50%;
 
 }
+.whynyg{
+    background: white
+    height:100px;
+    width:100px;
+    border-radius:50%;
+}
