--- a/style2.css
+++ b/style2.css
@@ -143,7 +143,7 @@ background-color:darkred;
 
 }
 .whynyg{
-    background: white
+    background: white;
     height:100px;
     width:100px;
     border-radius:50%;
